--- a/public/style/index.css
+++ b/public/style/index.css
@@ -90,11 +90,6 @@ section {
     display: inline-block;
 }
 
-.room > h3 {
-    display: inline-block;
-    vertical-align: middle;
-}
-
 .users {
     width: 33%;
     display: inline-block;
@@ -117,4 +112,17 @@ section {
     width: 4vw;
     height: 4vw;
     padding-right: 15%;
+}
+
+.room_name {
+    display: inline-block;
+    vertical-align: middle;
+    width: 33%;
+    padding-top: 0.5%;
+}
+
+.submit {
+    float: right;
+    margin-right: 2%;
+    margin-top: 1%;
 }
