--- a/public/style/index.css
+++ b/public/style/index.css
@@ -184,3 +184,17 @@ section {
 #no:hover {
     background-color: #b21e2e;
 }
+
+.reservation-done {
+    position: absolute;
+    z-index: 1;
+    width: 50vw;
+    top: 25%;
+    right: 25%;
+    padding: 2vw;
+    background-color: white;
+    border-style: solid;
+    border-width: 4px;
+    border-color: rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+}
